github auth works